<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>fr.perrier</groupId>
        <artifactId>NextDungeon</artifactId>
        <version>1.0.4-SNAPSHOT</version>
    </parent>
    <artifactId>NextDungeon-Module-Cinematic</artifactId>
    <packaging>jar</packaging>

    <name>NextDungeon Module Cinematic</name>
    <description>Dynamic cinematic module for NextDungeon — camera interpolation, NPC sync, timeline events</description>

    <dependencies>
        <dependency>
            <groupId>fr.perrier</groupId>
            <artifactId>NextDungeon-Common</artifactId>
            <version>1.0.4-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- Spigot API (provided by server at runtime) -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- PacketEvents API (provided by server plugin at runtime) -->
        <dependency>
            <groupId>com.github.retrooper</groupId>
            <artifactId>packetevents-spigot</artifactId>
            <version>2.9.5</version>
            <scope>provided</scope>
        </dependency>

        <!-- EntityLib for packet-level entity management (provided by server plugin at runtime) -->
        <dependency>
            <groupId>io.github.tofaa2</groupId>
            <artifactId>spigot</artifactId>
            <version>3.0.3-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>

        <!-- Gson (provided by host) -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>codemc-releases</id>
            <url>https://repo.codemc.io/repository/maven-releases/</url>
        </repository>
        <repository>
            <id>pvphub-maven-tofaa</id>
            <name>PvPHub Maven</name>
            <url>https://maven.pvphub.me/tofaa</url>
        </repository>
    </repositories>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
